# otvetka

./: .gitignore  CLAUDE.md  README.md
scripts/: fetch-llama.ps1  fetch-sd.ps1
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  gen.rs  image.rs  llama.rs  main.rs  models.rs  settings.rs
ui/: chat.js  common.css  i18n.js  image.js  index.html  popup.js  settings.html  settings.js
