[package]
name = "otvetka"
version = "1.0.0"
description = "Ответка — локальный ИИ-помощник для ответов в чатах"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "time"] }
futures-util = "0.3"
arboard = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
